--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 h1{
   text-color: black;
   font-family: monospace;
+  text-align: center;
 }
+h2{
+  text-color: black;
+  font-family: monospace;
+  text-align: center;
+}
+  
