--- a/style.css
+++ b/style.css
@@ -8,4 +8,8 @@ h2{
   font-family: monospace;
   text-align: center;
 }
-  
+.intro{
+  text-color: black;
+  font-family: monospace;
+  text-align: center;
+}
