--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body{
   color: white;
   text-align: center;
   font-family: monospace;
-  padding : 50% ;
+  padding: 50%;
+  margin: 50%;
 }
 .hs{
   color: lime;
