--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   background-color: black;
   color: white;
   text-align: center;
-  font-family: "Roboto", monospace;
+  font-family: "roboto", monospace;
 }
 .hs{
   color: lime;
