--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: grey; 
+}
+::-webkit-scrollbar-thumb {
+    background: white; 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: lime; 
+}
+
 body{
   background-color: black;
   color: white;
