--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-::-webkit-scrollbar {
+-webkit-scrollbar {
     width: 10px;
 }
-::-webkit-scrollbar-track {
+-webkit-scrollbar-track {
     background: grey; 
 }
-::-webkit-scrollbar-thumb {
+-webkit-scrollbar-thumb {
     background: white; 
 }
-::-webkit-scrollbar-thumb:hover {
+-webkit-scrollbar-thumb:hover {
     background: lime; 
 }
 
