--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ body{
 .intro{
   font-size: 16pt;
 }
+.wrapper {
+        text-align: center; 
+    }
+.wrapper ul {
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+}
